# get-weibo-favorites

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  database.py  docker-compose.yml  get_weibo_cookies.py  go.mod  go.sum  login.py  main.go  main.py  pyproject.toml  requirements.txt  setup.py  test_crawler.py  utils.py  weibo_auth.py  weibo_crawler.py
.github/workflows/: ci.yml  test.yml
docker/queue-worker/: Dockerfile
docker/rq-dashboard/: Dockerfile
libs/: libsimple.dylib
libs/dict/pos_dict/: char_state_tab.utf8  prob_emit.utf8  prob_start.utf8  prob_trans.utf8
scripts/: check_redis_jobs.py  clear_redis_queues.py  multiprocess_test.py  run_process_image_content.py  run_worker.py  update_mblogid.py
src/weibo_favorites/: auth.py  config.py  crawler.py  database.py  logging_config.py  run_history.py  scheduler.py  utils.py
src/weibo_favorites/crawler/: __init__.py  auth.py  crawler.py  media_processor.py  queue.py  queue_manager.py  queue_worker.py  rate_limiter.py  run_history.py  scheduler.py  tasks.py  worker.py
src/weibo_favorites/web/: __init__.py  app.py  db.py
src/weibo_favorites/web/templates/: base.html  favorites.html  index.html  runs.html  weibo_detail.html
tests/: conftest.py  test_auth.py  test_crawler.py  test_database.py  test_media_processor.py  test_queue.py  test_scheduler.py  test_tasks.py
tests/fixtures/: test_cookies.json
tests/integration/: __init__.py  conftest.py  test_rate_limiter.py
