[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "weibo-favorites"
version = "0.1.0"
description = "A Python package for crawling and archiving Weibo favorites"
authors = ["xujiajiadexiaokeai <whjiang1997@gmail.com>"]
readme = "README.md"
packages = [{include = "weibo_favorites", from = "src"}]
repository = "https://github.com/xujiajiadexiaokeai/get-weibo-favorites"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9"
selenium = ">=4.15.2"
webdriver-manager = ">=4.0.1"
flask = ">=3.0.0"
requests = ">=2.31.0"
redis = ">=5.0.0"
rq = ">=1.15.1"
python-dotenv = ">=1.0.0"
pydantic-settings = ">=2.7.1"
Pillow = ">=10.1.0"
rq-scheduler = ">=0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
